# puzzle_generator

./: .gitpod.yml  CODE_OF_CONDUCT.md  LICENSE  PuzzleGenerator.py  README.md  bandit.yml  bump_version.sh  check_all_python_files.sh  check_python_file.sh  codecov.yml  create_tag.sh  generate_coverage_data.sh  gitpod.dockerfile  pyproject.toml  run_all_examples.sh  run_all_examples_no_poetry.sh  sonar-project.properties  validate_codecov_yml.sh
.github/: dependabot.yml
.github/workflows/: all_url_check.yml  black_format.yml  check_examples.yml  create_tag.yml  pip_audit.yml  publish.yml  python_test.yml  scorecard.yml  third_party_checks.yml
examples/: base16_example.py  base16_to_reduce_output_size.py  base32_to_reduce_output_size.py  base85_to_reduce_output_size.py  basic_usage.py  sha256_usage.py  with_hints.py
puzzle_generator/: README.md  _bu_configurators.py  _bytes_utils.py  _puzzle_data_creators.py  _puzzle_data_encryption.py  _rp_configurators.py  _run_puzzle.py  bu_configurators.py  bytes_utils.py  create_puzzle.py  hints_utils.py  puzzle_data_creators.py  puzzle_data_encryption.py  randomise_index.py  rp_configurators.py  run_puzzle.py  simple_encryption.py  simple_encryption_utils.py  spiced_simple_encryption.py  string_to_code.py
puzzle_generator/_bytestr_utils/: bu_b16.py  bu_b32.py  bu_b32hex.py  bu_b64.py  bu_b85.py  bu_urlsafe_b64.py
puzzle_generator/_ea_configurators/: ea_configurators.py
puzzle_generator/_ea_configurators/eac_simple/: eacs_common.py  eacs_simple.py  eacs_spiced.py
puzzle_generator/_encryption_algorithms/ea_simple/: eas_common.py
puzzle_generator/bytestr_utils/: bu_standard_b64.py
puzzle_generator/configurators/: check_kwargs.py  common.py  configurators.py
puzzle_generator/configurators/simple/: cfs_common.py  common.py  simple.py  spiced.py
puzzle_generator/ea_configurators/: ea_configurators.py
puzzle_generator/ea_configurators/eac_simple/: eacs_common.py  eacs_simple.py  eacs_spiced.py
puzzle_generator/encryption_algorithms/ea_simple/: eas_spiced.py
puzzle_generator/encryption_algorithms/simple/: common.py  eas_common.py  simple.py  spiced.py
tests/: test_bytes_utils.py  test_bytestr.py  test_configurators.py  test_create_puzzle.py  test_ea_configurators.py  test_encryption_utils.py  test_encryptions.py  test_hints_utils.py  test_puzzle_data_creators.py  test_puzzle_data_encryption.py  test_randomise_index.py  test_simple_encryption_utils.py  test_string_to_code.py  utils.py
tests/encryption_algorithms/: test_bytestr.py  test_common.py  test_eas_common.py  test_eas_spiced.py  test_encryption_algorithms.py  test_spiced.py
