[tool.poetry]
name = "puzzle-generator"
version = "0.17.0"
description = "Generates python code representing a puzzle"
authors = ["piotr.idzik <vil02_puzzle_generator@10g.pl>"]
readme = "./puzzle_generator/README.md"
license = "MIT"
packages = [{include = "puzzle_generator"}]
repository = "https://github.com/vil02/puzzle_generator"
keywords = ["puzzle-generation", "quiz-generation", "code-generation"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0.0"
black = "25.11.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
bandit = "1.9.1"
coverage = "7.11.3"
flake8 = "7.3.0"
flake8-bugbear = "25.10.21"
flake8-pytest-style = "2.2.0"
isort = "7.0.0"
mypy = "1.18.2"
pylint = "4.0.3"
pyright = {extras = ["nodejs"], version = "1.1.407"}
pytest = "9.0.1"
ruff = "0.14.5"
xenon = "0.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
