[tool.poetry]
name = "puzzle-generator"
version = "0.17.0"
description = "Generates python code representing a puzzle"
authors = ["piotr.idzik <vil02_puzzle_generator@10g.pl>"]
readme = "./puzzle_generator/README.md"
license = "MIT"
packages = [{include = "puzzle_generator"}]
repository = "https://github.com/vil02/puzzle_generator"
keywords = ["puzzle-generation", "quiz-generation", "code-generation"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0.0"
black = "25.12.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
bandit = "1.9.2"
coverage = "7.13.0"
flake8 = "7.3.0"
flake8-bugbear = "25.11.29"
flake8-pytest-style = "2.2.0"
isort = "7.0.0"
mypy = "1.19.1"
pylint = "4.0.4"
pyright = {extras = ["nodejs"], version = "1.1.407"}
pytest = "9.0.2"
ruff = "0.14.9"
xenon = "0.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
