[tool.poetry]
name = "puzzle-generator"
version = "0.19.2"
description = "Generates python code representing a puzzle"
authors = ["piotr.idzik <vil02_puzzle_generator@10g.pl>"]
readme = "./puzzle_generator/README.md"
license = "MIT"
packages = [{include = "puzzle_generator"}]
repository = "https://github.com/vil02/puzzle_generator"
keywords = ["puzzle-generation", "quiz-generation", "code-generation"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0.0"
black = "26.5.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
bandit = "1.9.4"
coverage = "7.14.0"
flake8 = "7.3.0"
flake8-bugbear = "25.11.29"
flake8-pytest-style = "2.2.0"
isort = "8.0.1"
mypy = "2.1.0"
pylint = "4.0.5"
pyright = {extras = ["nodejs"], version = "1.1.409"}
pytest = "9.0.3"
ruff = "0.15.14"
xenon = "0.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
